[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/textures/axe.png" type="Texture" id=1]
[ext_resource path="res://scenes/gameplay/guillotine.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/warning.png" type="Texture" id=3]
[ext_resource path="res://scenes/gameplay/hurtbox.gd" type="Script" id=4]

[sub_resource type="Shader" id=9]
code = "// NOTE: Shader automatically converted from Godot Engine 3.5.2.stable's CanvasItemMaterial.

shader_type canvas_item;
render_mode blend_mix;

const float PI = 3.141592653;

uniform float u_lifePerc = .5;

void fragment() {
	float lifePerc = (u_lifePerc + PI) / (2.0 * PI);
	vec4 col = vec4(0,0,0,1);
	vec2 uv = UV;
	uv -= vec2(.5,.5);
	float dist = length(uv);
	if (dist < .4 || dist > .5) {
		col.a = 0.;
	}
	uv.y *= -1.;
	uv.x *= -1.;
	float angle = atan(uv.y, uv.x);
	float normalized_angle = 1. - angle / PI;
	col.r = normalized_angle;

//	if (1. - normalized_angle > lifePerc) {
//		col.a = 0.;
//	}

	if (angle < u_lifePerc) {
		
	} else {
		col.a = 0.;
	}
	
	col.rgb = mix(vec3(1,0,0), vec3(0,1,0), lifePerc);
	
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/u_lifePerc = 2.77

[sub_resource type="ExternalTexture" id=8]
size = Vector2( 170, 170 )

[sub_resource type="Shader" id=4]
code = "// NOTE: Shader automatically converted from Godot Engine 3.5.2.stable's CanvasItemMaterial.

shader_type canvas_item;
render_mode blend_mix;

uniform float u_progress = .4f;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	if (COLOR.a != 0.f)
		COLOR.a = u_progress * 2.;
//	COLOR.r = UV.y;
	if (1. - UV.y < u_progress)
		COLOR.r = 1.;
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/u_progress = 0.599

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="CapsuleShape2D" id=11]

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("pivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/handle:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "charge"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("pivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 10 ),
"update": 0,
"values": [ 0.0, 5400.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/handle:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.5 ), Vector2( 1, 1 ), Vector2( 1, 1.5 ), Vector2( 1, 1 ), Vector2( 1, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "spawn"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:m_height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -510.0, 250.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:m_currentAngle")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ 0.0, 18.85 ]
}

[node name="guillotine" type="Node2D"]
script = ExtResource( 2 )
m_height = -510.0

[node name="hp" type="Sprite" parent="."]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0.572549 )
material = SubResource( 10 )
position = Vector2( 0, 1 )
texture = SubResource( 8 )

[node name="pivot" type="Node2D" parent="."]

[node name="handle" type="Node2D" parent="pivot"]
position = Vector2( 0, -29 )

[node name="Sprite" type="Sprite" parent="pivot/handle"]
rotation = -0.785398
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="warning" type="Sprite" parent="pivot/handle"]
unique_name_in_owner = true
material = SubResource( 5 )
position = Vector2( 0, -81 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="hit_box" type="Area2D" parent="pivot/handle"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2
monitoring = false

[node name="hitbox_collision" type="CollisionShape2D" parent="pivot/handle/hit_box"]
unique_name_in_owner = true
position = Vector2( 3.55271e-15, -8 )
scale = Vector2( 5.71114, 1.95799 )
shape = SubResource( 1 )

[node name="hurtbox" type="Area2D" parent="pivot/handle"]
unique_name_in_owner = true
position = Vector2( 0, 29 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/handle/hurtbox"]
position = Vector2( -1, -18 )
scale = Vector2( 5.32605, 3.04304 )
shape = SubResource( 11 )

[node name="notice_area" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="notice_collision" type="CollisionShape2D" parent="notice_area"]
unique_name_in_owner = true
scale = Vector2( 21.0214, 21.0214 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/charge = SubResource( 6 )
anims/spawn = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="pivot/handle/hit_box" to="." method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="notice_area" to="." method="_on_notice_area_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
